# druidbsd

./: GNUmakefile.in  LICENSE  README.md  configure  configure.in
dep/freebsd/: README
dep/freebsd/mfsroot/: Makefile  README
dep/freebsd/mfsroot/src/boot/modules/: nullfs.ko  tmpfs.ko
dep/freebsd/mfsroot/src/etc/: group  rc  sh.subr
dep/freebsd/patches/: README  release::Makefile.patch  release::i386::boot_crunch.conf.patch  sys::kern::vfs_mount.c.patch  usr.sbin::pw::pw_user.c.patch  usr.sbin::sysinstall::Makefile.patch  usr.sbin::sysinstall::anonFTP.c.patch  usr.sbin::sysinstall::config.c.patch  usr.sbin::sysinstall::dispatch.c.patch  usr.sbin::sysinstall::help::shortcuts.hlp.patch  usr.sbin::sysinstall::install.c.patch  usr.sbin::sysinstall::installUpgrade.c.patch  usr.sbin::sysinstall::label.c.patch  usr.sbin::sysinstall::media.c.patch  usr.sbin::sysinstall::menus.c.patch  usr.sbin::sysinstall::modules.c.patch  usr.sbin::sysinstall::mouse.c.patch  usr.sbin::sysinstall::msg.c.patch  usr.sbin::sysinstall::network.c.patch  usr.sbin::sysinstall::nfs.c.patch  usr.sbin::sysinstall::nullfs.c.patch  usr.sbin::sysinstall::options.c.patch  usr.sbin::sysinstall::package.c.patch  usr.sbin::sysinstall::sysinstall.8.patch  usr.sbin::sysinstall::sysinstall.h.patch  usr.sbin::sysinstall::system.c.patch  usr.sbin::sysinstall::tcpip.c.patch  usr.sbin::sysinstall::user.c.patch
doc/: BUILD  CHANGES  TODO  VERSIONING
mdroot/boot/: loader  loader.rc  menu.rc
mdroot/boot/include/: beastie.4th  brand.4th  chkpasswd.4th  dc_execute.4th  menu-commands.4th  menu.4th  shortcuts.4th  version.4th
mdroot/boot/modules/: acpi.ko  acpi.ko.symbols
mdroot/kernels/: GENERIC-i386-8.1p1.kgz
src/boot/druidbsd/: isolinux.cfg
src/boot/include/: boot.msg  isolinux-menu.cfg
src/boot/isolinux/: isolinux.cfg  menu.cfg  menu.cfg.druidbsd  menu.cfg.tools  modules.alias  modules.pcimap
src/boot/other/: isolinux.cfg
src/boot/tools/: isolinux.cfg
src/boot/tools/dban/: f1-warning.txt  f2-about.txt  f3-quick.txt  f4-trouble.txt  f5-raid.txt  isolinux.cfg
src/boot/tools/killdisk/: isolinux.cfg
src/boot/tools/memtest/: isolinux.cfg
src/boot/tools/seatools/: isolinux.cfg
src/boot/tools/windiag/: isolinux.cfg
src/freebsd/rescue/: bash  growfs  swapadd  swapinfo  swapoff  which
src/freebsd/rescue/etc/: profile  remote  termcap
src/freebsd/rescue/lib/: libc.so.7  libiconv.so.3  libintl.so.9  libkvm.so.5  libncurses.so.8  libutil.so.8
src/freebsd/rescue/libexec/: ld-elf.so.1
